test/libsolidity/syntaxTests/constructor/library_constructor.sol
library Lib {
	constructor();
}
// ----
// TypeError: (15-36): Constructor cannot be defined in libraries.
// TypeError: (15-36): Constructor must be implemented if declared.
